--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cardiomyopathy-blog",
-  "version": "0.0.0",
+  "name": "creative-project",
+  "version": "1.2.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -15,11 +15,15 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "apexcharts": "^3.37.1",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "cors": "^2.8.5",
     "datatables.net-dt": "^1.13.4",
     "datatables.net-select-bs5": "^1.6.2",
     "datatables.net-vue3": "^2.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "firebase": "^9.18.0",
     "pinia": "^2.0.32",
     "stripe": "^12.4.0",
