--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@stripe/stripe-js": "^1.52.1",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "apexcharts": "^3.37.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
@@ -26,7 +28,7 @@
     "express": "^4.18.2",
     "firebase": "^9.18.0",
     "pinia": "^2.0.32",
-    "stripe": "^12.4.0",
+    "stripe": "^12.5.0",
     "vee-validate": "^4.8.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
