--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier": "^2.8.4",
     "start-server-and-test": "^2.0.0",
     "vite": "^4.1.4",
+    "vite-node": "^3.0.5",
     "vitest": "^0.29.1"
   }
 }
